Fix button align

--- a/src/stylesheets/modules/shop/_custom.scss
+++ b/src/stylesheets/modules/shop/_custom.scss
@@ -191,6 +191,7 @@ html#ecwid_html {
       .ecwid-btn--primary {
         color: $white;
         border: 0 !important;
+        padding-bottom: 1px !important;
       }
       .ecwid-btn--checkout {
         width: 180px;
